added icons for adming

--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -55,13 +55,13 @@
       <ion-row class="ion-justify-content-start">
         <ion-col [ngClass]="{'selected': router.url.includes('insight')}" (click)="clickManageMenu('insight', null)">
           <ion-item class="ion-no-padding" [color]="router.url.includes('insight') ? 'primary' : 'secondary'" lines="none">
-            <ion-icon class="ion-no-margin" slot="start" name="stats-chart"></ion-icon>
+            <ion-icon class="ion-no-margin" slot="start" name="insight"></ion-icon>
             <ion-label class="menu-label">Insight</ion-label>
           </ion-item>
         </ion-col>
         <ion-col [ngClass]="{'selected': router.url.includes('/profile')}" (click)="clickManageMenu('profile', null)">
           <ion-item class="ion-no-padding" [color]="router.url.includes('/profile') ? 'primary' : 'secondary'" lines="none">
-            <ion-icon class="ion-no-margin" slot="start" name="clipboard"></ion-icon>
+            <ion-icon class="ion-no-margin" slot="start" name="profile"></ion-icon>
             <ion-label class="menu-label">Profile</ion-label>
           </ion-item>
         </ion-col>
@@ -85,25 +85,25 @@
         </ion-col>
         <ion-col [ngClass]="{'selected': router.url.includes('groups')}" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348')) && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e9fe35cc8bf1a622fec69d7')))" (click)="clickManageMenu('groups', null)"> <!--Groups-->
           <ion-item class="ion-no-padding" [color]="router.url.includes('groups') ? 'primary' : 'secondary'" lines="none">
-            <ion-icon class="ion-no-margin" slot="start" name="people-circle-outline"></ion-icon>
+            <ion-icon class="ion-no-margin" slot="start" name="people"></ion-icon>
             <ion-label class="menu-label">Groups</ion-label>
           </ion-item>
         </ion-col>
         <ion-col [ngClass]="{'selected': router.url.includes('programs')}" *ngIf="moment && moment.categories && moment.categories.includes('5c915324e172e4e64590e346')" (click)="clickManageMenu('programs', null)">
           <ion-item class="ion-no-padding" [color]="router.url.includes('programs') ? 'primary' : 'secondary'" lines="none">
-            <ion-icon class="ion-no-margin" slot="start" name="book"></ion-icon>
+            <ion-icon class="ion-no-margin" slot="start" name="programs"></ion-icon>
             <ion-label class="menu-label">Programs</ion-label>
           </ion-item>
         </ion-col>
         <ion-col [ngClass]="{'selected': router.url.includes('creator')}" (click)="clickManageMenu('creator', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5e9f46e1c8bf1a622fec69d5') || moment.categories.includes('5dfdbb547b00ea76b75e5a70'))"> <!--if Journey or Relationship-->
           <ion-item class="ion-no-padding" [color]="router.url.includes('creator') ? 'primary' : 'secondary'" lines="none">
-            <ion-icon class="ion-no-margin" slot="start" name="paper-plane"></ion-icon>
+            <ion-icon class="ion-no-margin" slot="start" name="curriculum"></ion-icon>
             <ion-label class="menu-label">Curriculum</ion-label>
           </ion-item>
         </ion-col>
         <ion-col [ngClass]="{'selected': router.url.includes('onboarding')}" (click)="clickManageMenu('onboarding', null)" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e17acd47b00ea76b75e5a71'))">
           <ion-item class="ion-no-padding" [color]="router.url.includes('onboarding') ? 'primary' : 'secondary'" lines="none">
-            <ion-icon class="ion-no-margin" slot="start" name="list"></ion-icon>
+            <ion-icon class="ion-no-margin" slot="start" name="onboarding"></ion-icon>
             <ion-label class="menu-label">Onboarding</ion-label>
           </ion-item>
         </ion-col>
@@ -115,7 +115,7 @@
         </ion-col>
         <ion-col [ngClass]="{'selected': router.url.includes('subscription')}" (click)="clickManageMenu('subscription', null)" *ngIf="moment && moment.categories.includes('5c915324e172e4e64590e346')">
           <ion-item class="ion-no-padding" [color]="router.url.includes('subscription') ? 'primary' : 'secondary'" lines="none">
-            <ion-icon class="ion-no-margin" slot="start" name="planet"></ion-icon>
+            <ion-icon class="ion-no-margin" slot="start" name="subscription"></ion-icon>
             <ion-label class="menu-label">Subscription</ion-label>
           </ion-item>
         </ion-col>
