added new journey icon to admin

--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -73,7 +73,7 @@
         </ion-col>
         <ion-col [ngClass]="{'selected': router.url.includes('journey')}" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348')) && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e9f46e1c8bf1a622fec69d5')))" (click)="clickManageMenu('journey', null)"> <!--Journey-->
           <ion-item class="ion-no-padding" [color]="router.url.includes('journey') ? 'primary' : 'secondary'" lines="none">
-            <ion-icon class="ion-no-margin" slot="start" name="walk-outline"></ion-icon>
+            <ion-icon class="ion-no-margin" slot="start" name="journey"></ion-icon>
             <ion-label class="menu-label">Journeys</ion-label>
           </ion-item>
         </ion-col>
@@ -168,7 +168,7 @@
     </ion-item>
     <!--Journey, only Show in Community or Program, and if they enabled this Children Category-->
     <ion-item (click)="clickManageMenu('journey', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348')) && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e9f46e1c8bf1a622fec69d5')))"> <!--Journey-->
-      <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
+      <ion-icon slot="start" name="journey" *ngIf="platform.width() < 768"></ion-icon>
       <ion-label>Journey</ion-label>
     </ion-item>
     <!--Mentoring, only Show in Community or Program, and if they enabled this Children Category-->
