fixed settings icon + added groups + mentoring icons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,7 @@
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
             <ion-item id="userProfileSettings" [routerLink]="['/app/user/profile']" mode="md">
-              <ion-icon slot="start" name="settings"></ion-icon>
+              <ion-icon slot="start" name="new-settings"></ion-icon>
               <ion-label>Settings</ion-label>
             </ion-item>
           </ion-menu-toggle>
