--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -79,13 +79,13 @@
         </ion-col>
         <ion-col [ngClass]="{'selected': router.url.includes('mentoring')}" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348')) && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e9fe372c8bf1a622fec69d8')))" (click)="clickManageMenu('mentoring', null)"> <!--Mentoring-->
           <ion-item class="ion-no-padding" [color]="router.url.includes('mentoring') ? 'primary' : 'secondary'" lines="none">
-            <ion-icon class="ion-no-margin" slot="start" name="grid"></ion-icon>
+            <ion-icon class="ion-no-margin" slot="start" name="mentoring"></ion-icon>
             <ion-label class="menu-label">Mentoring</ion-label>
           </ion-item>
         </ion-col>
         <ion-col [ngClass]="{'selected': router.url.includes('groups')}" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348')) && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e9fe35cc8bf1a622fec69d7')))" (click)="clickManageMenu('groups', null)"> <!--Groups-->
           <ion-item class="ion-no-padding" [color]="router.url.includes('groups') ? 'primary' : 'secondary'" lines="none">
-            <ion-icon class="ion-no-margin" slot="start" name="people"></ion-icon>
+            <ion-icon class="ion-no-margin" slot="start" name="group"></ion-icon>
             <ion-label class="menu-label">Groups</ion-label>
           </ion-item>
         </ion-col>
@@ -173,12 +173,12 @@
     </ion-item>
     <!--Mentoring, only Show in Community or Program, and if they enabled this Children Category-->
     <ion-item (click)="clickManageMenu('mentoring', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348')) && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e9fe372c8bf1a622fec69d8')))"> <!--Mentoring-->
-      <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
+      <ion-icon slot="start" name="mentoring" *ngIf="platform.width() < 768"></ion-icon>
       <ion-label>Mentoring</ion-label>
     </ion-item>
     <!--Groups, only Show in Community or Program, and if they enabled this Children Category-->
     <ion-item (click)="clickManageMenu('groups', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348')) && (!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e9fe35cc8bf1a622fec69d7')))"> <!--Group-->
-      <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
+      <ion-icon slot="start" name="group" *ngIf="platform.width() < 768"></ion-icon>
       <ion-label>Groups</ion-label>
     </ion-item>
     <ion-item (click)="clickManageMenu('onboarding', null)" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e17acd47b00ea76b75e5a71'))">
