--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
@@ -50,6 +50,9 @@
           <circle [style.strokeDasharray]="circumference" [style.strokeDashoffset]="dashoffset" [attr.r]="radius" cx="60"
             cy="60" stroke-width="12" class="progress__value" />
         </svg>
+        <div class="progress-value-text">
+          {{circleGraphValue}} %
+        </div>
       </ion-col>
       <ion-col size="7">list of items</ion-col>
     </ion-row>
