--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.scss
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.scss
@@ -67,6 +67,10 @@ app-feature-insight {
 //   0% { stroke-dasharray: 0 100;}
 // }
 
+.progress{
+  position: relative;
+}
+
 .progress__svg {
   transform: rotate(-90deg);
 }
@@ -83,6 +87,12 @@ app-feature-insight {
 .progress__value {
   stroke: #4caf50;
   transition: all;
+}
+
+.progress-value-text{
+  position: absolute;
+  top: 48px;
+  left: 45px;
 }
 
 }
