added gray background to ion-content element and added elipses tool and ion-card element to implement

--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
@@ -11,7 +11,9 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12">
-        <ion-label>Organization Snapshot</ion-label>
+  <ion-card>
+    <ion-label>Organization Snapshot</ion-label>
+  </ion-card>
       </ion-col>
       <ion-col>
         <h2>55</h2>
@@ -54,6 +56,7 @@
       <ion-col size="12">
         <ion-label>Growth Progression</ion-label>
    <ion-toolbar *ngIf="['owner','admin','staff'].includes(userData.user.role)">
+    <ion-icon name="ellipsis-horizontal-outline"></ion-icon>
         <ngx-charts-line-chart
                 [scheme]="colorScheme"
                 [schemeType]="schemeType"
