--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.scss
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.scss
@@ -1,5 +1,9 @@
 app-feature-insight {
 
+  ion-content {
+    --background: var(--ion-color-lightgrey);
+  }
+
   .column-label {
     text-align: center;
   }
