--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
@@ -8,25 +8,25 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid>
+  <!-- <ion-grid> -->
     <ion-row>
-      <ion-col size="12">
-  <ion-card>
+  <ion-card class="section-card">
     <ion-label>Organization Snapshot</ion-label>
-  </ion-card>
-      </ion-col>
-      <ion-col>
+    <ion-row>
+      <ion-col size="4">
         <h2>55</h2>
         <ion-note>active members</ion-note>
       </ion-col>
-      <ion-col>
+      <ion-col size="4">
         <h2>2</h2>
         <ion-note>small groups</ion-note>
       </ion-col>
-      <ion-col>
+      <ion-col size="4">
         <h2>11</h2>
         <ion-note>1:1 relationships</ion-note>
       </ion-col>
+    </ion-row>
+  </ion-card>
     </ion-row>
     <ion-row>
       <ion-col size="12">
@@ -125,5 +125,5 @@
         <div class="last-date small-font ion-text-wrap ion-no-margin" slot="end">{{relationship.last_response_date | datetime: 'm:n,d:n,y:n'}}</div>
       </ion-item>
     </ion-list>
-  </ion-grid>
+  <!-- </ion-grid> -->
 </ion-content>
