--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
@@ -8,49 +8,53 @@
 </ion-header>
 
 <ion-content>
-  <!-- <ion-grid> -->
-    <ion-row>
-  <ion-card class="section-card">
-    <ion-label>Organization Snapshot</ion-label>
-    <ion-row>
-      <ion-col size="4">
-        <h2>55</h2>
-        <ion-note>active members</ion-note>
-      </ion-col>
-      <ion-col size="4">
-        <h2>2</h2>
-        <ion-note>small groups</ion-note>
-      </ion-col>
-      <ion-col size="4">
-        <h2>11</h2>
-        <ion-note>1:1 relationships</ion-note>
-      </ion-col>
+  <ion-grid>
+    <ion-row class="ion-margin-bottom">
+      <ion-card class="section-card">
+        <ion-label>Organization Snapshot</ion-label>
+        <ion-row>
+          <ion-col size="4">
+            <h2>55</h2>
+            <ion-note>active members</ion-note>
+          </ion-col>
+          <ion-col size="4">
+            <h2>2</h2>
+            <ion-note>small groups</ion-note>
+          </ion-col>
+          <ion-col size="4">
+            <h2>11</h2>
+            <ion-note>1:1 relationships</ion-note>
+          </ion-col>
+        </ion-row>
+      </ion-card>
     </ion-row>
-  </ion-card>
-    </ion-row>
-    <ion-row>
-      <ion-col size="12">
-        <ion-label>Overall Health</ion-label>
-      </ion-col>
-      <ion-col size="1">
-        <ion-icon name="chevron-forward-outline" color="primary" slot="end"></ion-icon>
-      </ion-col>
-      <ion-col size="5">
-        <div class="progress">
-          <svg width="120" height="120" viewBox="0 0 120 120" class="progress__svg">
-            <circle [attr.r]="radius" cx="60" cy="60" stroke-width="12" class="progress__meter" />
-            <circle [style.strokeDasharray]="circumference" [style.strokeDashoffset]="dashoffset" [attr.r]="radius" cx="60"
-              cy="60" stroke-width="12" class="progress__value" />
-          </svg>
-          <div class="progress-value-text">
-            {{circleGraphValue}}%
+    <ion-row class="ion-margin-bottom">
+      <ion-card class="section-card">
+        <ion-col size="12">
+          <ion-label>Overall Health</ion-label>
+        </ion-col>
+        <ion-row>
+       <ion-col size="1">
+          <ion-icon name="chevron-forward-outline" color="primary" slot="end"></ion-icon>
+        </ion-col>
+        <ion-col size="5">
+          <div class="progress">
+            <svg width="120" height="120" viewBox="0 0 120 120" class="progress__svg">
+              <circle [attr.r]="radius" cx="60" cy="60" stroke-width="12" class="progress__meter" />
+              <circle [style.strokeDasharray]="circumference" [style.strokeDashoffset]="dashoffset" [attr.r]="radius"
+                cx="60" cy="60" stroke-width="12" class="progress__value" />
+            </svg>
+            <div class="progress-value-text">
+              {{circleGraphValue}}%
+            </div>
           </div>
-        </div>
-      </ion-col>
-      <ion-col size="6">
-        <h6>Recent Activity</h6>
-        <progress value="80" max="100"></progress>
-      </ion-col>
+        </ion-col>
+        <ion-col size="6">
+          <h6>Recent Activity</h6>
+          <progress value="80" max="100"></progress>
+        </ion-col>
+        </ion-row>
+      </ion-card>
     </ion-row>
     <ion-row>
       <ion-col size="12">
@@ -125,5 +129,5 @@
         <div class="last-date small-font ion-text-wrap ion-no-margin" slot="end">{{relationship.last_response_date | datetime: 'm:n,d:n,y:n'}}</div>
       </ion-item>
     </ion-list>
-  <!-- </ion-grid> -->
+  </ion-grid>
 </ion-content>
