--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
@@ -61,8 +61,9 @@
           <ion-col size="12">
             <ion-item>
               <ion-label>Growth Progression</ion-label>
-              <ion-select slot="end" interface="action-sheet"
-              (ionChange)="loadMetrics($event.target.value)">
+              <ion-icon (click)="openFilter.value = null; openFilter.open($event)" slot="end" name="ellipsis-horizontal-outline">filter</ion-icon>
+              <ion-select #OpenFilter interface="action-sheet"
+              (ionChange)="loadMetrics($event.target.value)" hidden>
               <!-- 30 days, 90 days, this year, last year -->
                 <ion-select-option value=thisWeek>This Week</ion-select-option>
                 <ion-select-option value=thisMonth>This Month</ion-select-option>
