--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.scss
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.scss
@@ -52,33 +52,10 @@ app-feature-insight {
     font-size: 12px;
   }
 
-//   .circle-background {
-//   fill: none;
-//   stroke: #c4c4c4;
-//   stroke-width: 5;
-//   stroke-dasharray: 100, 100;
-//   stroke-linecap: round;
-// }
-
-// .circle-circle {
-//   animation: circle-chart-fill 1s ease-in-out;
-//   fill: none;
-//   stroke: #b4ffce;
-//   stroke-width: 5;
-//   stroke-dasharray: 25, 100;
-//   stroke-linecap: round;
-// }
-
-// .percentage{
-//   font-size: .5em;
-//   text-anchor: middle;
-// }
-// @keyframes circle-chart-fill {
-//   0% { stroke-dasharray: 0 100;}
-// }
-
 .progress{
   position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .progress__svg {
@@ -101,8 +78,15 @@ app-feature-insight {
 
 .progress-value-text{
   position: absolute;
-  top: 48px;
-  left: 45px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  text-align: center;
 }
 
 }
