--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
@@ -12,7 +12,11 @@
   <ion-grid>
     <ion-row class="ion-margin-bottom">
       <ion-card class="section-card">
-        <ion-label>Organization Snapshot</ion-label>
+        <ion-row>
+            <ion-item lines="none">
+              <ion-label>Organization Snapshot</ion-label>
+            </ion-item>
+        </ion-row>
         <div class="ion-text-center">
           <ion-row>
             <ion-col size="4">
@@ -33,26 +37,29 @@
     </ion-row>
     <ion-row class="ion-margin-bottom">
       <ion-card class="section-card">
-        <ion-col size="12">
-          <ion-label>Overall Health</ion-label>
-        </ion-col>
+        <ion-row>
+          <ion-col size="12">
+            <ion-item lines="none">
+              <ion-label>Overall Health</ion-label>
+            </ion-item>
+          </ion-col>
+        </ion-row>
         <ion-row>
           <ion-col size="5">
             <div class="progress">
               <svg width="120" height="120" viewBox="0 0 120 120" class="progress__svg">
                 <circle [attr.r]="radius" cx="60" cy="60" stroke-width="12" class="progress__meter" />
                 <circle [style.strokeDasharray]="circumference" [style.strokeDashoffset]="dashoffset" [attr.r]="radius"
-                  cx="60" cy="60" stroke-width="12" class="progress__value" />
+                  cx="60" cy="60" stroke-width="9" class="progress__value" />
               </svg>
               <div class="progress-value-text">
-                {{circleGraphValue}}%
+                {{circleGraphValue}}
               </div>
             </div>
           </ion-col>
           <ion-col size="7">
-            <h6>Recent Activity</h6>
-            <!-- Work on this v -->
-            <progress value="80" max="100"></progress>
+            <ion-label class="overall-health-labels">Recent Activity</ion-label>
+            <progress value="90" max="100"></progress>
           </ion-col>
         </ion-row>
       </ion-card>
