--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
@@ -48,9 +48,9 @@
           <ion-col size="5">
             <div class="progress">
               <svg width="120" height="120" viewBox="0 0 120 120" class="progress__svg">
-                <circle [attr.r]="radius" cx="60" cy="60" stroke-width="12" class="progress__meter" />
+                <circle [attr.r]="radius" cx="60" cy="60" stroke-width="9" class="progress__meter" />
                 <circle [style.strokeDasharray]="circumference" [style.strokeDashoffset]="dashoffset" [attr.r]="radius"
-                  cx="60" cy="60" stroke-width="9" class="progress__value" />
+                  cx="60" cy="60" stroke-width="6" class="progress__value" />
               </svg>
               <div class="progress-value-text">
                 {{circleGraphValue}}
@@ -85,7 +85,7 @@
           <ion-row class="ion-justify-content-center">
             <div class="legend-box ion-text-center">
               <div class="active-relationship-color"></div>
-              <span>51 active</span>
+              <span>{{activeParticipants}} activity</span>
             </div>
           </ion-row>
           </ion-col>
