--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
@@ -46,7 +46,7 @@
         </ion-row>
         <ion-row>
           <ion-col size="5">
-            <div class="progress">
+            <div class="circle-progress">
               <svg width="120" height="120" viewBox="0 0 120 120" class="progress__svg">
                 <circle [attr.r]="radius" cx="60" cy="60" stroke-width="9" class="progress__meter" />
                 <circle [style.strokeDasharray]="circumference" [style.strokeDashoffset]="dashoffset" [attr.r]="radius"
@@ -59,7 +59,7 @@
           </ion-col>
           <ion-col size="7">
             <ion-label class="overall-health-labels">Recent Activity</ion-label>
-            <progress value="90" max="100"></progress>
+            <progress class="growth-progress" value="90" max="100"></progress>
           </ion-col>
         </ion-row>
       </ion-card>
