kevin-tolentino-metric-insight-duration-control (#180)
* added debug.log file name to gitignore due to vscode bug

* added ion-select with action-sheet interface to show on view

* added html ion-selectio-option tags for relevant date change selections

* added commented note for adding parameter to loadMetrics method

* made progress in click event with ion-select tag and ionchange attribute

* added parameters with hard coded values to test loadMetrics methods

* achieved chart changing on update with hard coding day values

* succeeded in changing graph on ion-select-option change by using switch cases with respective string value attributes from html

* added commented code to reset array by assigning empty array value in loadMetrics method

* deleted onClick test handler and added correct ion-select-option calues

* implemented date object to return first day of the week.

* added console log on line 142 and 144 to check for firstDayOfWeek and xScaleMin and changed html values on chart

* created first row organization snapshot using ion-row, ion-col, and ion-note

* added skeleton for growth progression

* implemented dynamic angular pie chart by reference

* defined correct variable to dynamically display change of health score percentage

* added progress bar html element to view

* added gray background to ion-content element and added elipses tool and ion-card element to implement

* finished rough organization snapshot section with ion-col and ion-card styling

* finished rough overall health section with ion-col and ion-card styling

* added rough growth progression section with ion row styling

* added ion-select with action-sheet interface to show on view

* added html ion-selectio-option tags for relevant date change selections

* added commented note for adding parameter to loadMetrics method

* made progress in click event with ion-select tag and ionchange attribute

* added parameters with hard code

--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.scss
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.scss
@@ -1,5 +1,15 @@
 app-feature-insight {
 
+  ion-content {
+    --background: var(--ion-color-lightgrey);
+  }
+
+  .section-card {
+    width: 100%;
+    margin: 0 5px;
+    padding: 10px 0;
+  }
+
   .column-label {
     text-align: center;
   }
@@ -10,13 +20,12 @@ app-feature-insight {
     padding-bottom: 10px;
 
     .insight-person-avatar {
-      margin: auto;
+      margin: 3px auto 5px auto;
       height: 40px;
       width: 40px;
     }
 
     .insight-person-label {
-      margin: 5px auto 0 auto;
       color: grey;
       font-size: 12px;
     }
@@ -29,7 +38,7 @@ app-feature-insight {
 
   .progress {
     text-align: center;
-    width: 20%; // 32%
+    width: 20%;
   }
 
   .last-date {
@@ -41,4 +50,79 @@ app-feature-insight {
   .small-font {
     font-size: 12px;
   }
+
+.circle-progress{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+.progress__svg {
+  transform: rotate(-90deg);
+}
+
+.progress__meter,
+.progress__value {
+  fill: none;
+}
+
+.progress__meter {
+  stroke: #ccc;
+}
+
+.progress__value {
+  stroke: #87BB1F;
+  transition: all;
+}
+
+.progress-value-text{
+  position: absolute;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  text-align: center;
+  font-size: 36px;
+}
+
+progress[value].growth-progress {
+  -webkit-appearance: none;
+   appearance: none;
+
+  width: 90%;
+  height: 8px;
+}
+progress[value].growth-progress::-webkit-progress-bar {
+  background-color: #eee;
+  border-radius: 5px;
+  outline-color: #b3b3b3;
+}
+
+progress[value].growth-progress::-webkit-progress-value {
+  background-image:
+	   -webkit-linear-gradient(45deg, #3FA7D6 40%, #87BB1F);
+    border-radius: 5px;
+}
+
+.legend-box {
+  width: 100%;
+}
+
+.active-relationship-color {
+    height: 10px;
+    width: 10px;
+    background: #F2A573;
+    margin-right: 5px;
+    display: inline-block;
+}
+
+h2 {
+  font-weight: bold;
+}
+
 }
