fix a bug when app state changes, if one is managing a relationship activity, the desktop web app reloads and the manage page is redirected to the first community/program in the admin activity id list

--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -14,7 +14,7 @@
     <!--<ion-title *ngIf="!modalPage && userData.currentManageActivityId && userData.activitiesWithAdminAccess" class="ion-text-wrap">
     </ion-title>-->
     <ion-title (click)="select.open($event)" *ngIf="!modalPage">{{moment.matrix_string[0][0]}} <ion-note><ion-icon name="create-outline"></ion-icon></ion-note>
-      <ion-select [(ngModel)]="userData.currentManageActivityId" (ionChange)="changeManageActivity($event)" [interface]="platform.width() < 768 ? 'alert' : 'alert'" [interfaceOptions]="{header: 'Manage'}" hidden>
+      <ion-select [(ngModel)]="userData.currentManageActivityId" (ngModelChange)="changeManageActivity($event)" [interface]="platform.width() < 768 ? 'alert' : 'alert'" [interfaceOptions]="{header: 'Manage'}" hidden>
         <div *ngFor="let activity of userData.activitiesWithAdminAccess">
           <ion-select-option [value]="activity._id" *ngIf="activity.categories.includes('5c915324e172e4e64590e346')">{{activity.name}}</ion-select-option>
         </div>
