--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
@@ -10,60 +10,62 @@
 </ion-header>
 <ion-content>
   <ion-grid>
-    <ion-row class="ion-margin-bottom">
-      <ion-card class="section-card">
-        <ion-row>
+    <div *ngIf="['owner','admin','staff'].includes(userData.user.role)">
+      <ion-row class="ion-margin-bottom">
+        <ion-card class="section-card">
+          <ion-row>
             <ion-item lines="none">
               <ion-label>Organization Snapshot</ion-label>
             </ion-item>
-        </ion-row>
-        <div class="ion-text-center">
+          </ion-row>
+          <div class="ion-text-center">
+            <ion-row>
+              <ion-col size="4">
+                <h2>55</h2>
+                <ion-note>active members</ion-note>
+              </ion-col>
+              <ion-col size="4">
+                <h2>2</h2>
+                <ion-note>small groups</ion-note>
+              </ion-col>
+              <ion-col size="4">
+                <h2>11</h2>
+                <ion-note>1:1 relationships</ion-note>
+              </ion-col>
+            </ion-row>
+          </div>
+        </ion-card>
+      </ion-row>
+      <ion-row class="ion-margin-bottom">
+        <ion-card class="section-card">
           <ion-row>
-            <ion-col size="4">
-              <h2>55</h2>
-              <ion-note>active members</ion-note>
-            </ion-col>
-            <ion-col size="4">
-              <h2>2</h2>
-              <ion-note>small groups</ion-note>
-            </ion-col>
-            <ion-col size="4">
-              <h2>11</h2>
-              <ion-note>1:1 relationships</ion-note>
+            <ion-col size="12">
+              <ion-item lines="none">
+                <ion-label>Overall Health</ion-label>
+              </ion-item>
             </ion-col>
           </ion-row>
-        </div>
-      </ion-card>
-    </ion-row>
-    <ion-row class="ion-margin-bottom">
-      <ion-card class="section-card">
-        <ion-row>
-          <ion-col size="12">
-            <ion-item lines="none">
-              <ion-label>Overall Health</ion-label>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size="5">
-            <div class="circle-progress">
-              <svg width="120" height="120" viewBox="0 0 120 120" class="progress__svg">
-                <circle [attr.r]="radius" cx="60" cy="60" stroke-width="9" class="progress__meter" />
-                <circle [style.strokeDasharray]="circumference" [style.strokeDashoffset]="dashoffset" [attr.r]="radius"
-                  cx="60" cy="60" stroke-width="6" class="progress__value" />
-              </svg>
-              <div class="progress-value-text">
-                {{circleGraphValue}}
+          <ion-row>
+            <ion-col size="5">
+              <div class="circle-progress">
+                <svg width="120" height="120" viewBox="0 0 120 120" class="progress__svg">
+                  <circle [attr.r]="radius" cx="60" cy="60" stroke-width="9" class="progress__meter" />
+                  <circle [style.strokeDasharray]="circumference" [style.strokeDashoffset]="dashoffset" [attr.r]="radius"
+                          cx="60" cy="60" stroke-width="6" class="progress__value" />
+                </svg>
+                <div class="progress-value-text">
+                  {{circleGraphValue}}
+                </div>
               </div>
-            </div>
-          </ion-col>
-          <ion-col size="7">
-            <ion-label class="overall-health-labels">Recent Activity</ion-label>
-            <progress class="growth-progress" value="90" max="100"></progress>
-          </ion-col>
-        </ion-row>
-      </ion-card>
-    </ion-row>
+            </ion-col>
+            <ion-col size="7">
+              <ion-label class="overall-health-labels">Recent Activity</ion-label>
+              <progress class="growth-progress" value="90" max="100"></progress>
+            </ion-col>
+          </ion-row>
+        </ion-card>
+      </ion-row>
+    </div>
     <ion-row class="ion-margin-bottom">
       <ion-card class="section-card">
         <ion-row>
@@ -91,7 +93,7 @@
           </ion-col>
         </ion-row>
           <ion-row>
-            <ion-toolbar *ngIf="['owner','admin','staff'].includes(userData.user.role)">
+            <ion-toolbar>
               <ngx-charts-line-chart [scheme]="colorScheme" [schemeType]="schemeType" [legend]="legend"
                 [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxis]="xAxis"
                 [xAxisTickFormatting]="dateTickFormatting" [yAxis]="yAxis" [xAxisLabel]="xAxisLabel" [xScaleMin]="xScaleMin"
